fix flexbox with nowrap

--- a/assets/src/scss/_base.scss
+++ b/assets/src/scss/_base.scss
@@ -14,6 +14,13 @@ input, textarea {
 .col {
   min-width: 0;
 }
+@each $name, $value in $grid-breakpoints {
+  @include media-breakpoint-up($name) {
+    .col-#{$name} {
+      min-width: 0;
+    }
+  }
+}
 
 // grid
 .flex-auto {
